<resources>
    <string name="app_name">OCTANE</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_register">REGISTER</string>
    <string name="txt_register_alert">Not registered? Register Now</string>
    <string name="txt_email_id">Email ID</string>
    <string name="txt_password">Password</string>
    <string name="txt_field1">First Name</string>
    <string name="txt_field2">Last Name</string>
    <string name="txt_field3">City</string>
    <string name="txt_field4">State</string>
    <string name="txt_field5">Country</string>
    <string name="txt_field6">Phone</string>
    <string name="txt_field7">Car Model</string>
    <string name="txt_field8">Password</string>
    <string name="txt_field9">Confirm Password</string>
    <string name="txt_pin">PIN Code</string>
    <string name="txt_change">Change PIN</string>


    <string name="txt_create_account">Create your Account</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_setting">SETTING</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_active">ActiveActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_item_help">HELP</string>
    <string name="nav_item_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="msg_connecting_bluetooth_module">Connecting to OCTANE Device...</string>
    <string name="msg_find_module_error">Cannot find OCTANE in paired devices!</string>
    <string name="msg_socket_create_error">Bluetooth Socket Error!</string>
    <string name="msg_connection_fail">Cannot connect to the target module!</string>
    <string name="msg_connection_success">Connect successfully!</string>
    <string name="btn_skip_text">SKIP</string>
    <string name="btn_start_text">Get Started</string>

</resources>
