<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:weightSum="11"
    android:paddingTop="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/img_arrow"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_margin="38dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/txt_create_account"
                />
            <EditText
                android:id="@+id/edtFN"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_field1"
                android:textColorHint="#70ffffff"
                android:textColor="@color/white"
                android:background="@color/field1"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edtLN"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_field2"
                android:textColorHint="#70ffffff"
                android:textColor="@color/white"
                android:background="@color/field1"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_email_id"
                android:textColorHint="#70ffffff"
                android:textColor="@color/white"
                android:background="@color/field1"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_field3"
                android:textColorHint="#30ffffff"
                android:textColor="@color/white"
                android:background="@color/field2"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edtState"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_field4"
                android:textColorHint="#30ffffff"
                android:textColor="@color/white"
                android:background="@color/field2"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edtCountry"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_field5"
                android:textColorHint="#30ffffff"
                android:textColor="@color/white"
                android:background="@color/field2"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_field6"
                android:textColorHint="#30ffffff"
                android:textColor="@color/white"
                android:background="@color/field2"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:inputType="phone"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edtCarModel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_field7"
                android:textColorHint="#70ffffff"
                android:textColor="@color/white"
                android:background="@color/field1"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:inputType="text"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edtPwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_field8"
                android:textColorHint="#70ffffff"
                android:textColor="@color/white"
                android:background="@color/field1"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />
            <EditText
                android:id="@+id/edtConfirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:hint="@string/txt_field9"
                android:textColorHint="#70ffffff"
                android:textColor="@color/white"
                android:background="@color/field1"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/img_btn_login"
        android:gravity="center"
        android:text="@string/txt_register"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

</LinearLayout>
