<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login1"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="10dp"
    android:weightSum="16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:background="@drawable/img_email_box"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:src="@drawable/img_user_avatar" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/txt_email_id"
                android:background="@android:color/transparent"
                android:textColorHint="#90ffffff"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:background="@drawable/img_password_box"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:src="@drawable/img_password_avatar" />

            <EditText
                android:id="@+id/edtPwd"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/txt_password"
                android:textColorHint="#70ffffff"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="6dp"
            android:layout_weight="1" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="6dp"
            android:layout_weight="1"
            android:background="@drawable/img_btn_login"
            android:gravity="center"
            android:text="@string/txt_login"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_register_alert"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>


</LinearLayout>